# scattack

./: .pre-commit-config.yaml  404.html  README.md  dnsmasq.conf  index.html  mkdocs.yml  objects.inv  pyproject.toml  report.md
docs/: index.md  reference.md
lab/kathara-lab_arp/: lab.conf  lab.ext  pc1.startup  pc2.startup
reference/: index.html
report/: .gitignore  _quarto.yml  index.qmd  report.bib  report.qmd  zotero.bib
search/: search_index.json
src/scattack/core/: __init__.py  arp_poison.py  dhcp_starve.py  utils.py  wifi_deauth.py
src/scattack/gui/: __main__.py  alert.py  app.py  command.py  executor.py  utils.py  validation.py
src/scattack/gui/arp_poison/: command.py  layout.py  options.py  utils.py
src/scattack/gui/dhcp_starve/: layout.py
src/scattack/gui/tabs/arp_poison/: command.py  layout.py  options.py
src/scattack/gui/tabs/dhcp_starve/: command.py  layout.py  options.py
src/scattack/gui/tabs/wifi_deauth/: command.py  layout.py  options.py
src/scattack/gui/wifi_deauth/: command.py  layout.py  options.py  utils.py
