[project]
name = "scattack"
version = "0.1.0"
description = "A simple tool to perform various attacks on a network, using scapy."
authors = [
    {name = "Sayafdine Said", email = "musikid@outlook.com"},
]
dependencies = [
    "scapy>=2.5.0",
    "customtkinter>=5.2.1",
    "CTkToolTip>=0.8",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[project.optional-dependencies]
cli = [
    "typer>=0.9.0",
]

[tool.pdm.dev-dependencies]
test = [
    "pytest>=7.4.3",
]
docs = [
    # "quarto",
    "jupyter",
    "matplotlib",
    "plotly"
]
lint = [
    "mypy>=1.7.1",
    "black>=23.12.0",
    "isort>=5.13.1",
    "pre-commit>=3.5.0",
    "pylint>=3.0.3",
]
